2019-11-1
    First version
2019-11-14
    1. Fix some bugs
    2. Add real time monitor function
    3. Add some lock to limit the concurrence requests for web.
2019-12-02
    1. If read conf failed, don't reload conf.
    2. Optimize the error message for page modification of site info or display info.
    3. Change log rotating size to
          INFO 200M
          ERROR 20M
    4. Fix log conf error
2019-12-17
    1. Fix platform ORPHAN extend button problem.
    2. Re-organize room definition.
    3. Fix the problem backend message pushing would cause collecting failure.
    4. Add CD/JV code.
2019-12-18
    1. Fix bug that add/del site not to trigger re-collect.
2020-01-07
    1. Fix bug that conf change would cause some platforms not checked again.
2020-05-12
    1. Fix the problem loop when check vm is starting if vm cannot be started.
    2. Change PM passwd.
2020-05-15
    1. Support Chinese in desc/owner.
2020-05-29
    1. Add tty change function.
    2. Add restart mmi/node function.
2020-06-01
    1. Fix bug that no platform insert if validate from conf is null.
    2. Adjust parameter for muti visit to database, add a loop to update database.
    3. Collapse platform page.
    4. Display a interval timer for restart node.
    5. Prompt more info for display page.
    6. Only start/stop node, no mmi more.
    7. Add Restarting flag for node.
    8. Optimise the logic to update a node.
2020-06-02
    1. Update the room name of jv.
    2. Delete console log in js file.
2020-06-03
    1. Update the start/stop scripts.
    2. Enable to change display for shutdown vm.
    3. Enable the availability display for platform list.
    4. Enable to delete display node.