@@ -28,7 +28,8 @@ urlpatterns = [
     url(r'^submit_display/$', views.submit_display),
     url(r'^submit_restart_mmi/$', views.submit_restart_mmi),
     url(r'^submit_tty/$', views.submit_tty),
-    url(r'^$', views.index),
+    #url(r'^$', views.index),
+    url(r'^$', views.platform),
     url(r'^backend/$', views.backend2),
     url(r'^backend_push/$', views.backend_push),
     url(r'client_connect/$', views.client_connect),
