@@ -98,7 +98,7 @@
         padding-left:15px;
         position:fixed;
         overflow:scroll;
-        top:0;
+        top:50px;
         left:200px;
         bottom:0;
         right:0;
